Make sure show on large does not show up on small screens!

--- a/src/sass/site.scss
+++ b/src/sass/site.scss
@@ -218,7 +218,7 @@ a {
 }
 
 .show-on-large {
-  display: none;
+  display: none !important;
 }
 
 @media (min-width: 1280px) {
